logs/turtlesim/build.make.039.log.stderr
/home/alfredo/turtlesim/src/ros_tutorials/turtlesim/src/turtle.cpp: In member function ‘void turtlesim::Turtle::paint(QPainter&)’:
/home/alfredo/turtlesim/src/ros_tutorials/turtlesim/src/turtle.cpp:229:19: error: ‘font’ was not declared in this scope
   painter.setFont(font);
                   ^~~~
/home/alfredo/turtlesim/src/ros_tutorials/turtlesim/src/turtle.cpp:229:19: note: suggested alternative: ‘QFont’
   painter.setFont(font);
                   ^~~~
                   QFont
make[2]: *** [CMakeFiles/turtlesim_node.dir/src/turtle.cpp.o] Error 1
make[1]: *** [CMakeFiles/turtlesim_node.dir/all] Error 2
make: *** [all] Error 2
